# 25minutes

./: 25minutes.cabal  README.md  stack.yaml
src/: Main.hs
