name:                25minutes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gavri/25minutes#readme
license:             BSD3
license-file:        LICENSE
author:              Gavri Fernandez
maintainer:          gavri.fernandez@gmail.com
copyright:           2017 Gavri Fernandez
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable 25minutes
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time-units == 1.0.0,
                       fdo-notify == 0.3.1
